<resources>
    <string name="app_name">TableLayout</string>
    <string name="CalculatorView">0</string>
    <string name="button0">0</string>
    <string name="buttonEqual">=</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="AllClear">AC</string>
    <string name="mod">%</string>
    <string name="divide">/</string>
    <string name="allClear">AC</string>
    <string name="multiply">*</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="textView">0.0</string>
    <string name="decimalButton">.</string>
</resources>
