<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:stretchColumns="0,1,2,3">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="4"
            android:gravity="center_vertical|end"
            android:text="@string/textView"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="36sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/Clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:contentDescription="@string/allClear"
            android:onClick="allClear"
            android:text="@string/allClear"
            android:textSize="24sp" />

        <Button
            android:id="@+id/Modulus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/mod"
            android:onClick="goOperator"
            android:text="@string/mod"
            android:textSize="24sp" />

        <Button
            android:id="@+id/Divide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/divide"
            android:onClick="goOperator"
            android:text="@string/divide"
            android:textSize="24sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/num7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/button7"
            android:onClick="goOperand"
            android:text="@string/button7"
            android:textSize="24sp" />

        <Button
            android:id="@+id/num8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/button8"
            android:onClick="goOperand"
            android:text="@string/button8"
            android:textSize="24sp" />

        <Button
            android:id="@+id/num9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/button9"
            android:onClick="goOperand"
            android:text="@string/button9"
            android:textSize="24sp" />

        <Button
            android:id="@+id/Multi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/multiply"
            android:onClick="goOperator"
            android:text="@string/multiply"
            android:textSize="24sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/num4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/button4"
            android:onClick="goOperand"
            android:text="@string/button4"
            android:textSize="24sp" />

        <Button
            android:id="@+id/num5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/button5"
            android:onClick="goOperand"
            android:text="@string/button5"
            android:textSize="24sp" />

        <Button
            android:id="@+id/num6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/button6"
            android:onClick="goOperand"
            android:text="@string/button6"
            android:textSize="24sp" />

        <Button
            android:id="@+id/Subtract"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/subtract"
            android:onClick="goOperator"
            android:text="@string/subtract"
            android:textSize="24sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/num1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/button1"
            android:onClick="goOperand"
            android:text="@string/button1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/num2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/button2"
            android:onClick="goOperand"
            android:text="@string/button2"
            android:textSize="24sp" />

        <Button
            android:id="@+id/num3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/button3"
            android:onClick="goOperand"
            android:text="@string/button3"
            android:textSize="24sp" />

        <Button
            android:id="@+id/Add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/add"
            android:text="@string/add"
            android:textSize="24sp"
            android:onClick="goOperator" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/num0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:contentDescription="@string/button0"
            android:onClick="goOperand"
            android:text="@string/button0"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/decimalButton"
            android:onClick="goOperand"
            android:text="@string/decimalButton"
            android:textSize="24sp" />

        <Button
            android:id="@+id/Equal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/buttonEqual"
            android:onClick="goCompute"
            android:text="@string/buttonEqual"
            android:textSize="24sp" />
    </TableRow>
</TableLayout>